--- a/eZcart/templates/base.html
+++ b/eZcart/templates/base.html
@@ -84,10 +84,6 @@
 						</a>
 						{% endif %}
 						
-
-
-
-
 						<a href="#" class="flex-c-m trans-04 p-lr-25">
 							EN
 						</a>
@@ -169,6 +165,7 @@
 				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search">
 					<i class="zmdi zmdi-search"></i>
 				</div>
+				
 
 				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
 					<i class="zmdi zmdi-shopping-cart"></i>
@@ -203,9 +200,15 @@
 							Help & FAQs
 						</a>
 
-						<a href="login_user" class="flex-c-m p-lr-10 trans-04">
-							My Account
+						{% if user.is_authenticated %}
+						<a href="{% url 'profile' %}" class="flex-c-m trans-04 p-lr-25">
+							{{ user.username }}    </a>
+							
+						{% else %}
+						<a href="{% url 'login_user' %}" class="flex-c-m trans-04 p-lr-25">
+							Login
 						</a>
+						{% endif %}
 
 						<a href="#" class="flex-c-m p-lr-10 trans-04">
 							EN
