--- a/eZcart/templates/index.html
+++ b/eZcart/templates/index.html
@@ -143,7 +143,7 @@
 				</div>
 				{% endfor %}
 
-				{%for i in categories|slice:"2:" %}
+				{%for i in categories|slice:"2:5" %}
 				<div class="col-md-6 col-lg-4 p-b-30 m-lr-auto">
 					<!-- Block1 -->
 					<div class="block1 wrap-pic-w">
