--- a/eZcart/templates/base.html
+++ b/eZcart/templates/base.html
@@ -670,7 +670,7 @@
                 <div class="block2">
                   <div class="block2-pic hov-img0">
                     <img src="${rt.cproducts[i].productImage.url}" alt="IMG-PRODUCT" style="height:335.35px;">
-                    <a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+                    <a href="{% url 'product-detail' %}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
                       Quick View
                     </a>
                   </div>
@@ -706,7 +706,7 @@
                 <div class="block2">
                   <div class="block2-pic hov-img0">
                     <img src="${rt.cproducts[i].productImage.url}" alt="IMG-PRODUCT">
-                    <a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+                    <a href="{% url 'product-detail' %}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
                       Quick View
                     </a>
                   </div>
