--- a/eZcart/templates/shoping-cart.html
+++ b/eZcart/templates/shoping-cart.html
@@ -1,195 +1,234 @@
-{% extends "base.html" %}
+	{% extends "base.html" %}
 
-{% block title %}Shopping Cart{% endblock title %}
-
-
-
-{% block body %}
+	{% block title %}Shopping Cart{% endblock title %}
 
 
-	<!-- breadcrumb -->
-	<div class="container">
-		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
-			<a href="index" class="stext-109 cl8 hov-cl1 trans-04">
-				Home
-				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
-			</a>
 
-			<span class="stext-109 cl4">
-				Shoping Cart
-			</span>
-		</div>
-	</div>
-		
+	{% block body %}
 
-	<!-- Shoping Cart -->
-	<form class="bg0 p-t-75 p-b-85">
+
+		<!-- breadcrumb -->
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
-					<div class="m-l-25 m-r--38 m-lr-0-xl">
-						<div class="wrap-table-shopping-cart">
-							<table class="table-shopping-cart">
-								<tr class="table_head">
-									<th class="column-1">Product</th>
-									<th class="column-2"></th>
-									<th class="column-3">Price</th>
-									<th class="column-4">Quantity</th>
-									<th class="column-5">Total</th>
-								</tr>
+			<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
+				<a href="index" class="stext-109 cl8 hov-cl1 trans-04">
+					Home
+					<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+				</a>
 
-								<tr class="table_row">
-									<td class="column-1">
-										<div class="how-itemcart1">
-											<img src="images/item-cart-04.jpg" alt="IMG">
-										</div>
-									</td>
-									<td class="column-2">Fresh Strawberries</td>
-									<td class="column-3">$ 36.00</td>
-									<td class="column-4">
-										<div class="wrap-num-product flex-w m-l-auto m-r-0">
-											<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-minus"></i>
-											</div>
+				<span class="stext-109 cl4">
+					Shoping Cart
+				</span>
+			</div>
+		</div>
+			
 
-											<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" value="1">
+		<!-- Shoping Cart -->
+		<form class="bg0 p-t-75 p-b-85" action="{% url 'checkout'%}" method="post">
+			{% csrf_token %}
+			<input type="hidden" name="total" value="{{ total }}">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
+						<div class="m-l-25 m-r--38 m-lr-0-xl">
+							<div class="wrap-table-shopping-cart">
+								<table class="table-shopping-cart">
+									<tr class="table_head">
+										<th class="column-1">Product</th>
+										<th class="column-2"></th>
+										<th class="column-3">Price</th>
+										<th class="column-4">Quantity</th>
+										<th class="column-5">Total</th>
+									</tr>
+									{% if is_empty %}
+										<tr>
+											<td colspan="5" class="text-center p-t-50 p-b-50">
+												<h4 class="stext-109 cl4">Your cart is empty.</h4>
+												<a href="{% url 'shop' %}" class="btn btn-primary m-t-20">Continue Shopping</a>
+											</td>
+										</tr>	
+									{% else %}
+										{% for item in cart_items %}
+										<tr class="table_row">
+											<td class="column-1">
+												<div class="how-itemcart1 remove-item" data-product-id="{{ item.product.id }}">
+													<img src="{{item.product.productImage.url}}" alt="IMG">
+												</div>
+											</td>
+											
+											<td class="column-2"><a href="product-detail?id={{item.product.id}}" style="color: black; text-decoration: none;">{{ item.product.productName }} </a> </td>
+											<td class="column-3">$ {{ item.product.productPrice }}</td>
+											<td class="column-4">
+												<div class="wrap-num-product flex-w m-l-auto m-r-0">
+													<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+														<i class="fs-16 zmdi zmdi-minus"></i>
+													</div>
 
-											<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-plus"></i>
-											</div>
-										</div>
-									</td>
-									<td class="column-5">$ 36.00</td>
-								</tr>
+													<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" value="{{item.qty}}">
 
-								<tr class="table_row">
-									<td class="column-1">
-										<div class="how-itemcart1">
-											<img src="images/item-cart-05.jpg" alt="IMG">
-										</div>
-									</td>
-									<td class="column-2">Lightweight Jacket</td>
-									<td class="column-3">$ 16.00</td>
-									<td class="column-4">
-										<div class="wrap-num-product flex-w m-l-auto m-r-0">
-											<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-minus"></i>
-											</div>
-
-											<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product2" value="1">
-
-											<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-plus"></i>
-											</div>
-										</div>
-									</td>
-									<td class="column-5">$ 16.00</td>
-								</tr>
-							</table>
-						</div>
-
-						<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
-							<div class="flex-w flex-m m-r-20 m-tb-5">
-								<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code">
-									
-								<div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">
-									Apply coupon
-								</div>
+													<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+														<i class="fs-16 zmdi zmdi-plus"></i>
+													</div>
+												</div>
+											</td>
+											<td class="column-5">$ {{ item.sub_total }}</td>
+										</tr>
+										{% endfor %}
+									{%endif%}
+								</table>
 							</div>
 
-							<div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
-								Update Cart
+							<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
+								<div class="flex-w flex-m m-r-20 m-tb-5">
+									<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code">
+										
+									<div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">
+										Apply coupon
+									</div>
+								</div>
+
+								<div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
+									Update Cart
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
-					<div class="bor10 p-lr-40 p-t-30 p-b-40 m-l-63 m-r-40 m-lr-0-xl p-lr-15-sm">
-						<h4 class="mtext-109 cl2 p-b-30">
-							Cart Totals
-						</h4>
+					<div class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
+						<div class="bor10 p-lr-40 p-t-30 p-b-40 m-l-63 m-r-40 m-lr-0-xl p-lr-15-sm">
+							<h4 class="mtext-109 cl2 p-b-30">
+								Cart Totals
+							</h4>
 
-						<div class="flex-w flex-t bor12 p-b-13">
-							<div class="size-208">
-								<span class="stext-110 cl2">
-									Subtotal:
-								</span>
-							</div>
-
-							<div class="size-209">
-								<span class="mtext-110 cl2">
-									$79.65
-								</span>
-							</div>
-						</div>
-
-						<div class="flex-w flex-t bor12 p-t-15 p-b-30">
-							<div class="size-208 w-full-ssm">
-								<span class="stext-110 cl2">
-									Shipping:
-								</span>
-							</div>
-
-							<div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
-								<p class="stext-111 cl6 p-t-2">
-									There are no shipping methods available. Please double check your address, or contact us if you need any help.
-								</p>
-								
-								<div class="p-t-15">
-									<span class="stext-112 cl8">
-										Calculate Shipping
+							<div class="flex-w flex-t bor12 p-b-13">
+								<div class="size-208">
+									<span class="stext-110 cl2">
+										Subtotal:
 									</span>
+								</div>
 
-									<div class="rs1-select2 rs2-select2 bor8 bg0 m-b-12 m-t-9">
-										<select class="js-select2" name="time">
-											<option>Select a country...</option>
-											<option>USA</option>
-											<option>UK</option>
-										</select>
-										<div class="dropDownSelect2"></div>
-									</div>
-
-									<div class="bor8 bg0 m-b-12">
-										<input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="state" placeholder="State /  country">
-									</div>
-
-									<div class="bor8 bg0 m-b-22">
-										<input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="postcode" placeholder="Postcode / Zip">
-									</div>
-									
-									<div class="flex-w">
-										<div class="flex-c-m stext-101 cl2 size-115 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer">
-											Update Totals
-										</div>
-									</div>
-										
+								<div class="size-209">
+									<span class="mtext-110 cl2">
+										$ {{total}}
+									</span>
 								</div>
 							</div>
-						</div>
 
-						<div class="flex-w flex-t p-t-27 p-b-33">
-							<div class="size-208">
-								<span class="mtext-101 cl2">
-									Total:
-								</span>
+							<div class="flex-w flex-t bor12 p-t-15 p-b-30">
+								<div class="size-208 w-full-ssm">
+									<span class="stext-110 cl2">
+										Shipping:
+									</span>
+								</div>
+
+								<div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
+									<p class="stext-111 cl6 p-t-2" id="static-shipping-message">
+										Enter your shipping details to calculate shipping.
+									</p>
+								
+									<div class="p-t-15">
+										<span class="stext-112 cl8">
+											Calculate Shipping
+										</span>
+								
+										<div class="rs1-select2 rs2-select2 bor8 bg0 m-b-12 m-t-9">
+											<select class="js-select2" name="country" id="country">
+												<option>Select a country...</option>
+												<option>INDIA</option>
+												<option>USA</option>
+												<option>UK</option>
+											</select>
+											<div class="dropDownSelect2"></div>
+										</div>
+								
+										<div class="bor8 bg0 m-b-12">
+											<input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="state" id="state" placeholder="State / Country">
+										</div>
+								
+										<div class="bor8 bg0 m-b-22">
+											<input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="postcode" id="postcode" placeholder="Postcode / Zip">
+										</div>
+
+										<!-- Shipping Message (Added Here) -->
+										<div id="shipping-message" class="text-center m-b-20">
+											
+										</div>
+
+										<div class="flex-w">
+											<div id="update-totals-btn" class="flex-c-m stext-101 cl2 size-115 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer">
+												Update Totals
+											</div>
+										</div>
+									</div>
+								</div>
+								
 							</div>
 
-							<div class="size-209 p-t-1">
-								<span class="mtext-110 cl2">
-									$79.65
-								</span>
-							</div>
-						</div>
+							<div class="flex-w flex-t p-t-27 p-b-33">
+								<div class="size-208">
+									<span class="mtext-101 cl2">
+										Total:
+									</span>
+								</div>
 
-						<button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
-							Proceed to Checkout
-						</button>
+								<div class="size-209 p-t-1">
+									<span class="mtext-110 cl2">
+										$ {{total}}
+									</span>
+								</div>
+							</div>
+
+							
+
+							<button id="proceed-to-checkout" class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
+								Proceed to Checkout
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</form>
+		</form>
+			
+	{% endblock body %}	
+
+	{% block js %}
+	<script>
+		$jq(document).ready(function () {
+
+			// $jq("#proceed-to-checkout").click(function () {
+			//     window.location.href = "{% url 'checkout' %}";
+			// });
+
+			$jq("#update-totals-btn").click(function () {
+				let country = $jq("#country").val();
+				let state = $jq("#state").val();
+				let postcode = $jq("#postcode").val();
 		
-{% endblock body %}	
+				if (country !== "Select a country..." && state.trim() !== "" && postcode.trim() !== "") {
+					$jq("#shipping-message").html('<p class="stext-111 cl6 p-t-2" style="color:green;">No Shipping Charge</p>');
+				} else {
+					$jq("#shipping-message").html('<p class="stext-111 cl6 p-t-2" style="color:red;">Enter valid shipping details to proceed.</p>');
+				}
+			});
+		});
 		
+		$jq(".remove-item").click(function () {
+            let productId = $jq(this).data("product-id");
+
+            $jq.ajax({
+                url: "{% url 'remove_from_cart' %}",
+                type: "POST",
+                data: {
+                    product_id: productId,
+                    csrfmiddlewaretoken: "{{ csrf_token }}"
+                },
+                success: function (response) {
+                    if (response.status === "success") {
+                        location.reload(); // Cart ko refresh karna
+                    }
+                }
+            });
+        });
+		
+	</script>	
+	{% endblock js %}
+			
