--- a/eZcart/templates/order-success.html
+++ b/eZcart/templates/order-success.html
@@ -30,7 +30,7 @@
     .order-summary-item {
         margin-bottom: 10px;
         display: flex;
-        align-items: center;
+        {% comment %} align-items: center; {% endcomment %}
     }
 
     .order-summary-item img {
