--- a/eZcart/templates/shoping-cart.html
+++ b/eZcart/templates/shoping-cart.html
@@ -23,9 +23,9 @@
         
 
     <!-- Shoping Cart -->
-    <form class="bg0 p-t-75 p-b-85" action="{% url 'checkout'%}" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="total" value="{{ total }}">
+    {% comment %} <form class="bg0 p-t-75 p-b-85" action="{% url 'checkout'%}" method="post"> {% endcomment %}
+        {% comment %} {% csrf_token %} {% endcomment %}
+        {% comment %} <input type="hidden" name="total" value="{{ total }}"> {% endcomment %}
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
@@ -59,18 +59,22 @@
                                         <td class="column-3">$ {{ item.product.productPrice }}</td>
                                         <td class="column-4">
                                             <div class="wrap-num-product flex-w m-l-auto m-r-0">
-                                                <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+                                                <button class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m change-qty" 
+                                                    data-cart-item-id="{{ item.id }}" data-action="-1">
                                                     <i class="fs-16 zmdi zmdi-minus"></i>
-                                                </div>
+                                                </button>
 
-                                                <input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" value="{{item.qty}}">
+                                                <input class="mtext-104 cl3 txt-center num-product" 
+                                                    type="number" value="{{ item.qty }}" disabled>
 
-                                                <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+                                                <button class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m change-qty" 
+                                                    data-cart-item-id="{{ item.id }}" data-action="1">
                                                     <i class="fs-16 zmdi zmdi-plus"></i>
-                                                </div>
+                                                </button>
                                             </div>
                                         </td>
-                                        <td class="column-5">$ {{ item.sub_total }}</td>
+                                        <td class="column-5">$ <span class="item-subtotal">{{ item.sub_total }}</span></td>
+                                            
                                     </tr>
                                     {% endfor %}
                                 {%endif%}
@@ -108,7 +112,7 @@
 
                             <div class="size-209">
                                 <span class="mtext-110 cl2">
-                                    $ {{total}}
+                                    $ {{subtotal}}
                                 </span>
                             </div>
                         </div>
@@ -170,7 +174,7 @@
                                 </span>
                             </div>
 
-                            <div class="size-209 p-t-1">
+                            <div id="total" class="size-209 p-t-1">
                                 <span class="mtext-110 cl2">
                                     $ {{total}}
                                 </span>
@@ -179,14 +183,14 @@
 
                         
 
-                        <button id="proceed-to-checkout" class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
+                        <a id="proceed-to-checkout" href="{% url 'checkout' %}" class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
                             Proceed to Checkout
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </form>
+    {% comment %} </form> {% endcomment %}
         
 {% endblock body %}	
 
@@ -194,9 +198,42 @@
 <script>
     $jq(document).ready(function () {
 
-        // $jq("#proceed-to-checkout").click(function () {
-        //     window.location.href = "{% url 'checkout' %}";
-        // });
+        // Update quantity
+        $jq(".change-qty").click(function () {
+            let cartItemId = $jq(this).data("cart-item-id");
+           
+            let action = parseInt($jq(this).data("action"));
+            
+            $jq.get("{% url 'changeQty' %}", { qty: action, cid: cartItemId }, function (response) {
+                if (response.status === "success") {
+                    location.reload();
+                } else {
+                    alert(response.message); 
+                }
+            });
+        });
+
+        
+
+        // Remove item from cart
+        $jq(".remove-item").click(function () {
+            let productId = $jq(this).data("product-id");
+    
+            $jq.ajax({
+                url: "{% url 'remove_from_cart' %}",
+                type: "POST",
+                data: {
+                    product_id: productId,
+                    csrfmiddlewaretoken: "{{ csrf_token }}"
+                },
+                success: function (response) {
+                    if (response.status === "success") {
+                        location.reload(); // Cart ko refresh karna
+                    }
+                }
+            });
+        });
+       
 
         $jq("#update-totals-btn").click(function () {
             let country = $jq("#country").val();
@@ -211,23 +248,9 @@
         });
     });
     
-    $jq(".remove-item").click(function () {
-        let productId = $jq(this).data("product-id");
-
-        $jq.ajax({
-            url: "{% url 'remove_from_cart' %}",
-            type: "POST",
-            data: {
-                product_id: productId,
-                csrfmiddlewaretoken: "{{ csrf_token }}"
-            },
-            success: function (response) {
-                if (response.status === "success") {
-                    location.reload(); // Cart ko refresh karna
-                }
-            }
-        });
-    });
+    // $jq("#proceed-to-checkout").click(function () {
+    //     window.location.href = "{% url 'checkout' %}";
+    // });
     
 </script>	
 {% endblock js %}
