--- a/eZcart/templates/shop.html
+++ b/eZcart/templates/shop.html
@@ -245,7 +245,7 @@
 				</div>
 			</div>
 
-			<div class="row isotope-grid" id="pdata">
+			<div class="row isotope-grid" id="pdata_shop">
 			</div>
 
 			<!-- Load more -->
